[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/powerups.png" type="Texture" id=1]
[ext_resource path="res://scenes/items/powerups/base_powerup.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/console_label.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 12 )

[sub_resource type="Animation" id=3]
resource_name = "Appear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("info:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("info:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.6 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("info:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Disappear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("info:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("info:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("info:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("info:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("info:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("info:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ) ]
}

[node name="base_powerup" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="pickup_area" type="Area2D" parent="." groups=["powerup"]]
collision_layer = 6
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickup_area"]
shape = SubResource( 1 )

[node name="target_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="target_area"]
shape = SubResource( 2 )

[node name="info" type="Node2D" parent="."]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -2 )
z_index = 2

[node name="ColorRect" type="ColorRect" parent="info"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -68.0
margin_top = -65.0
margin_right = 71.0
margin_bottom = -15.0

[node name="ColorRect2" type="ColorRect" parent="info"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -67.0
margin_top = -64.0
margin_right = 70.0
margin_bottom = -16.0
color = Color( 0, 0, 0, 1 )

[node name="name_label" type="Label" parent="info"]
unique_name_in_owner = true
modulate = Color( 0.87451, 0.768627, 0.407843, 1 )
margin_left = -65.0
margin_top = -63.0
margin_right = 70.0
margin_bottom = -49.0
custom_fonts/font = ExtResource( 3 )
text = "Base Powerup"

[node name="desc_label" type="Label" parent="info"]
unique_name_in_owner = true
margin_left = -65.0
margin_top = -48.0
margin_right = 69.0
margin_bottom = -16.0
custom_fonts/font = ExtResource( 3 )
text = "+1 to all basic stats"
autowrap = true
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/Appear = SubResource( 3 )
anims/Disappear = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="body_entered" from="pickup_area" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="target_area" to="." method="_on_target_area_area_entered"]
[connection signal="area_exited" from="target_area" to="." method="_on_target_area_area_exited"]
